--- a/index.html
+++ b/index.html
@@ -3,10 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up Form</title>
+    <title>Sign Up</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <main class="container">
+        <aside class="bg-container">
+            <img class="bg-img" src="https://images.unsplash.com/photo-1585202900225-6d3ac20a6962?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+            <div class="fg-container">
+                <img class="fg-img" src="https://cdn.statically.io/gh/TheOdinProject/curriculum/5f37d43908ef92499e95a9b90fc3cc291a95014c/html_css/project-sign-up-form/odin-lined.png" alt="">
+                <h1>Odin</h1>
+            </div>
+            <footer>
+                <h6>
+                    Photo by <a href="https://unsplash.com/@haliewestphoto">Halie West</a> on <a href="https://unsplash.com/">Unsplash</a>
+                </h6>
+            </footer>
+        </aside>
+
+        <section class="content">
+            <section class="quote">
+                <blockquote>
+                    <p>“The only way to do great work is to love what you do. If you haven't found it yet, keep looking. Don't settle.”</p>
+                    <footer>Steve Jobs</footer>
+                </blockquote>
+            </section>
+            <fieldset>
+                <legend><h1>Let's do this!</h1></legend>
+                <form action="signup.php" method="POST">
+                    <div class="input-group">
+                        <label for="name">Name</label>
+                        <input type="text" name="name" id="name" required>
+                    </div>
+                    <div class="input-group">
+                        <label for="email">Email</label>
+                        <input type="email" name="email" id="email" required>
+                    </div>
+                    <div class="input-group">
+                        <label for="password">Password</label>
+                        <input type="password" name="password" id="password" required>
+                    </div>
+                    <div class="input-group">
+                        <label for="confirm-password">Confirm Password</label>
+                        <input type="password" name="confirm-password" id="confirm-password" required>
+                    </div>
+                    <button type="submit">Sign Up</button>
+                </form>
+            </fieldset>
+        </section>
+    </main>
 </body>
 </html>
