Working Changes in script.js and connected to the index.html.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <script src="script.js" defer></script>
     <main class="container">
         <aside class="bg-container">
             <img class="bg-img" src="https://images.unsplash.com/photo-1585202900225-6d3ac20a6962?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
@@ -30,7 +31,7 @@
             </section>
             <fieldset>
                 <legend><h1>Let's do this!</h1></legend>
-                <form id="signup" action="" method="POST">
+                <form id="signup" action="newpage.html" method="POST">
                     <div class="input-group">
                         <label for="fname">First Name</label>
                         <input type="text" name="fname" id="fname" required>
