--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </div>
                     <div class="input-group">
                         <label for="phn-no">Phone Number</label>
-                        <input type="tel" name="phn-no" id="phn-no" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
+                        <input type="tel" name="phn-no" id="phn-no" required>
                         <div class="error"></div>
                     </div>
                     <div class="input-group">
